[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "celestia-devtools"
version = "0.1.0"
description = "Shared build/devtool scripts for the celestia-island ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "langyo", email = "langyo.china@gmail.com" }]
keywords = ["cargo", "devtools", "build-tools", "celestia-island"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/celestia-island/celestia-devtools"
Repository = "https://github.com/celestia-island/celestia-devtools"

[project.scripts]
celestia-devtools = "celestia_devtools.core.cli:main"
cargo-cache-guard = "celestia_devtools.build.cache_guard:main"
format-markdown = "celestia_devtools.doc.markdown:main"
celestia-prefetch = "celestia_devtools.build.prefetch:main"
check-cross-deps = "celestia_devtools.build.cross_deps:main"
celestia-npm-dist = "celestia_devtools.npm.dist:main"
celestia-preflight = "celestia_devtools.env.preflight:main"
celestia-wsl-ensure = "celestia_devtools.env.wsl:main"
celestia-pglite = "celestia_devtools.env.pglite:main"
commit-msg-lint = "celestia_devtools.vcs.commit_msg:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/celestia_devtools"]

[tool.hatch.build.targets.wheel.force-include]
"src/celestia_devtools/common.just" = "celestia_devtools/common.just"

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
